<resources>

    <!-- wrong page -->
    <string name="wrong_page_text">似乎出问题了</string>
    <string name="wrong_page_reload_text">重新加载</string>

    <!-- no more -->
    <string name="no_more_text">暂无更多</string>

    <!-- 行间距倍数(中文) -->
    <string name="line_spacing_multiplier">1.2</string>

    <!-- 昵称最大长度 -->
    <string name="nickname_max_length">10</string>

    <!-- 队伍名称最大长度 -->
    <string name="team_name_max_length">10</string>

    <!-- 回复最大长度 -->
    <string name="comment_max_length">300</string>

    <string name="left_parentheses">(</string>
    <string name="right_parentheses">)</string>

    <!-- 首页 -->
    <string name="app_name">易起玩</string>
    <string name="title_home">首页</string>
    <string name="title_community">社区</string>
    <string name="title_message">消息</string>
    <string name="title_mine">我的</string>
    <string name="hot">热度</string>
    <string name="time">时间</string>
    <string name="activity">活动</string>
    <string name="contest">竞赛</string>

    <!-- 我的 -->
    <string name="mine_title">个人信息</string>
    <string name="mine_profile_photo">头像</string>
    <string name="mine_username">账号</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_sex">性别</string>
    <string name="mine_blog">我的博客</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_following">我关注的人</string>
    <string name="mine_school">学校</string>
    <string name="mine_login_text">登录体验更多功能</string>
    <string name="mine_login_button_text">登录</string>
    <string name="mine_sign_out">退出登录</string>
    <!-- sign out pop window -->
    <string name="sign_out_hint">退出登录后, 部分功能将无法使用, (您可以随时再次登录), 确认退出登录吗?</string>
    <string name="sign_out_cancel">取消</string>
    <string name="sign_out_confirm">退出登录</string>

    <!-- 搜索框 -->
    <string name="SearchHint">搜索活动、竞赛</string>
    <string name="SearchCancel">取消</string>
    <string name="UsedSearch">搜索历史</string>
    <string name="SearchClear">清空</string>

    <!-- more menu -->
    <string name="more_collect">收藏</string>
    <string name="more_copy">复制链接</string>
    <string name="more_forward">转发</string>

    <!-- contest -->
    <string name="contest_team_title">一起组队</string>
    <string name="contest_team">队伍: </string>
    <string name="contest_team_number_left">需要小伙伴 </string>
    <string name="contest_team_number_right"> 名</string>
    <string name="contest_team_create">我要组队</string>
    <string name="contest_no_more_team">暂无更多队伍</string>
    <string name="contest_team_join">加入</string>

    <!-- activity, blog -->
    <string name="content_source">来源: </string>
    <string name="my_comment_title">最新评论</string>
    <string name="my_comment_hint">我来评论</string>
    <string name="my_comment_reply">回复</string>
    <string name="my_no_more_comment">暂无更多评论</string>
    <string name="my_comment_reply_num">评论</string>
    <string name="blog_follow_author_button_text">关注</string>
    <string name="blog_unfollow_author_button_text">取消关注</string>

    <!-- 转发 -->
    <string name="forward_pop_window">取消</string>
    <string name="forward_wechat_friend">微信好友</string>
    <string name="forward_friend_circle">朋友圈</string>
    <string name="forward_qq_friend">QQ好友</string>
    <string name="forward_qq_space">QQ空间</string>
    <string name="forward_yiban">易班</string>

    <!-- commentInterface pop window -->
    <string name="comment_hint">说点什么</string>
    <string name="comment_publish">发表</string>

    <!-- view reply -->
    <string name="view_reply_all_comments">全部回复</string>
    <string name="view_reply_title">查看回复</string>

    <!-- view reply -->
    <string name="createTeamTitle">创建队伍</string>
    <string name="createTeamName">队伍名称</string>
    <string name="createTeamNameHint">请输入队伍名称</string>
    <string name="createTeamNumber">队伍人数</string>
    <string name="createTeamNumberHint">请输入队伍人数</string>
    <string name="createTeamCommentTitle">留言</string>
    <string name="createTeamButtonText">立即创建</string>

    <!-- edit nickname -->
    <string name="editNicknameTitle">设置昵称</string>
    <string name="editNicknameHint">取个让别人更容易记住你的昵称吧</string>
    <string name="editNicknameConfirmButtonText">保存</string>
    <string name="editNicknameEditTextHint">请输入昵称</string>

    <!-- choose sex pop window -->
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>

    <!-- create blog -->
    <string name="createBlogTitle">发布博客</string>
    <string name="createBlogPublishButtonText">发布</string>
    <string name="createBlogContentTitleHint">添加标题</string>
    <string name="createBlogContentHint">添加内容(至少10个字)</string>
    <string name="createBlogContentTitleMaxLength">38</string>
    <string name="createBlogContentMaxLength">1000</string>
    <string name="title_activity_collection">CollectionActivity</string>

    <!-- login -->
    <string name="yibanLoginText">易班登录</string>
    <string name="registerText">注册</string>
    <string name="visitorWayText">游客试用</string>
    <string name="loginUsernameHint">输入账号</string>
    <string name="loginPasswordHint">输入密码</string>
    <string name="registerUsernameHint">设置账号, 不少于6位</string>
    <string name="registerPasswordHint">设置密码, 不少于6位</string>
    <string name="registerNicknameHint">设置昵称</string>
    <string name="loginUsernameMaxLength">12</string>
    <string name="loginPasswordMaxLength">15</string>

    <!-- 我的博客 -->
    <string name="myBlogTitle">我的博客</string>
    <string name="myBlogNoBlog">您暂时还没有博客</string>

    <!-- 我的收藏 -->
    <string name="myCollectionTitle">我的收藏</string>
    <string name="myCollectionActivity">活动</string>
    <string name="myCollectionContest">竞赛</string>
    <string name="myCollectionBlog">博客</string>
    <string name="myCollectionNotFound">暂无收藏</string>

    <!-- 我关注的人 -->
    <string name="myFollowingTitle">我关注的人</string>
    <string name="myFollowingFollowText">关注</string>
    <string name="myFollowingUnFollowText">取消关注</string>
    <string name="myFollowingNotFound">暂无关注的人</string>

</resources>