<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/more_group">

        <item
            android:id="@+id/more_collect"
            android:title="@string/more_collect"
            android:icon="@drawable/ic_collect_black"
            app:showAsAction="never"/>

        <item
            android:id="@+id/more_copy"
            android:title="@string/more_copy"
            android:icon="@drawable/ic_copy_black"
            app:showAsAction="never"/>

        <item
            android:id="@+id/more_forward"
            android:title="@string/more_forward"
            android:icon="@drawable/ic_forward_black"
            app:showAsAction="never"/>

    </group>

</menu>