<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/forward_popwindow_background"
    android:padding="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/forward_wechat_friend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_wechat"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/forward_text_size"
                android:text="@string/forward_wechat_friend" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

            <Button
                android:id="@+id/forward_friend_circle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_friend_circle"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/forward_text_size"
                android:text="@string/forward_friend_circle" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <Button
                android:id="@+id/forward_qq_friend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_qq"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/forward_text_size"
                android:text="@string/forward_qq_friend" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <Button
                android:id="@+id/forward_qq_sapce"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_qq_space"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/forward_text_size"
                android:text="@string/forward_qq_space" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

            <Button
                android:id="@+id/forward_yiban"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_yiban"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/forward_text_size"
                android:text="@string/forward_yiban" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/forward_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_create_comment"
            android:text="@string/forward_pop_window"
            android:textColor="@color/forwardPopWindowCancel"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>